--- a/media/css/styleguide/styleguide.less
+++ b/media/css/styleguide/styleguide.less
@@ -42,6 +42,12 @@
 
 a[href="#TODO"] { color: #f00 !important; }
 
+.copyright-note {
+  clear: both;
+  padding-top: 20px;
+  .offset(3);
+}
+
 /* {{{ Grid setup */
 
 // Desktop:
