[Bug 1099330] Changing discussion forum link to info page

--- a/bedrock/mozorg/templates/mozorg/contact/communities/antarctica.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/antarctica.html
@@ -14,6 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://mozilla-antarctica.org/" class="website">mozilla-antarctica.org</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-antarctica" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="https://www.facebook.com/MozillaAntarctica" class="facebook">Facebook</a></li>
         </ul>
 
