--- a/bedrock/mozorg/templates/mozorg/contact/communities/bulgaria.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/bulgaria.html
@@ -14,6 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://bgzilla.org/" class="website">bgzilla.org</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-bulgaria" class="email">{{ _('Mailing list') }}</a></li>
         </ul>
 
         <figure class="feature-img">
