--- a/bedrock/mozorg/templates/mozorg/contact/communities/hungary.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/hungary.html
@@ -14,6 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://firefox.hu/" class="website">firefox.hu</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-hungary" class="email">{{ _('Mailing list') }}</a></li>
         </ul>
 
         <figure class="feature-img">
