--- a/bedrock/mozorg/templates/mozorg/contact/communities/india.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/india.html
@@ -15,7 +15,7 @@
 
         <ul class="extra">
           <li><a href="http://www.mozillaindia.org" class="website">www.mozillaindia.org</a></li>
-          <li><a href="mailto:community-india@lists.mozilla.org" class="email">{{ _('Mailing list') }}</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-india" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="irc://irc.mozilla.org/india" class="irc">IRC: #india</a></li>
           <li><a href="https://twitter.com/MozillaIN" class="twitter">@MozillaIN</a></li>
           <li><a href="https://www.facebook.com/mozillaindia" class="facebook">Facebook</a></li>
