--- a/bedrock/mozorg/templates/mozorg/contact/communities/kenya.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/kenya.html
@@ -14,6 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://www.mozilla-kenya.org/" class="website">www.mozilla-kenya.org</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-kenya" class="email">{{ _('Mailing list') }}</a></li>
         </ul>
 
         <figure class="feature-img">
