--- a/bedrock/mozorg/templates/mozorg/contact/communities/lithuania.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/lithuania.html
@@ -14,7 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://mozilla.lt/" class="website">mozilla.lt</a></li>
-          <li><a href="mailto:prisijunk@mozilla.lt" class="email">prisijunk@mozilla.lt</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-lithuania" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="https://www.facebook.com/mozilla.lt" class="facebook">Facebook</a></li>
         </ul>
 
