--- a/bedrock/mozorg/templates/mozorg/contact/communities/turkey.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/turkey.html
@@ -15,7 +15,7 @@
 
         <ul class="extra">
           <li><a href="http://www.mozilla.org.tr/" class="website">www.mozilla.org.tr</a></li>
-          <li><a href="mailto:bilgi@mozilla.org.tr" class="email">bilgi@mozilla.org.tr</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-turkey" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="https://twitter.com/FirefoxTurkiye" class="twitter">@FirefoxTurkiye</a></li>
           <li><a href="https://www.facebook.com/FirefoxTurkiye" class="facebook">Facebook</a></li>
         </ul>
