--- a/bedrock/mozorg/templates/mozorg/contact/communities/canada.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/canada.html
@@ -15,7 +15,7 @@
         <ul class="extra">
           <li><a href="http://www.mozillacanada.org" class="website">mozillacanada.org</a></li>
           <li><a href="irc://irc.mozilla.org/canada" class="irc">IRC: #canada</a></li>
-          <li><a href="mailto:community-canada@lists.mozilla.org" class="email">{{ _('Mailing list') }}</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-canada" class="email">{{ _('Mailing list') }}</a></li>
         </ul>
 
         <figure class="feature-img">
