--- a/bedrock/mozorg/templates/mozorg/contact/communities/denmark.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/denmark.html
@@ -15,6 +15,7 @@
         <ul class="extra">
           <li><a href="http://mozilladanmark.dk/" class="website">mozilladanmark.dk</a></li>
           <li><a href="http://forum.mozilladanmark.dk/" class="email">{{ _('Forum') }}</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-denmark" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="irc://irc.mozilla.org/mozilla.dk" class="irc">IRC: #mozilla.dk</a></li>
         </ul>
 
