--- a/bedrock/mozorg/templates/mozorg/contact/communities/germany.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/germany.html
@@ -14,7 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://www.mozilla.de/" class="website">www.mozilla.de</a></li>
-          <li><a href="mailto:community-german@lists.mozilla.org" class="email">{{ _('Mailing list') }}</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-german" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="https://twitter.com/mozilla_deutsch" class="twitter">@mozilla_deutsch</a></li>
           <li><a href="https://www.facebook.com/mozilla.de" class="facebook">Facebook</a></li>
           <li><a href="irc://irc.mozilla.org/mozilla.de" class="irc">IRC: #mozilla.de</a></li>
