--- a/bedrock/mozorg/templates/mozorg/contact/communities/norway.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/norway.html
@@ -14,6 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://www.firefox.no/" class="website">www.firefox.no</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-norway" class="email">{{ _('Mailing list') }}</a></li>
         </ul>
 
         <figure class="feature-img">
