--- a/bedrock/mozorg/templates/mozorg/contact/communities/portugal.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/portugal.html
@@ -14,6 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://www.mozilla.pt/" class="website">www.mozilla.pt</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-portugal" class="email">{{ _('Mailing list') }}</a></li>
         </ul>
 
         <figure class="feature-img">
