--- a/bedrock/mozorg/templates/mozorg/contact/communities/sri-lanka.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/sri-lanka.html
@@ -14,6 +14,7 @@
 
         <ul class="extra">
           <li><a href="http://www.mozilla.lk" class="website">mozilla.lk</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-sri-lanka" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="https://twitter.com/mozsrilanka" class="twitter">@mozsrilanka</a></li>
         </ul>
 
