--- a/bedrock/mozorg/templates/mozorg/contact/communities/taiwan.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/taiwan.html
@@ -15,7 +15,7 @@
 
         <ul class="extra">
           <li><a href="http://moztw.org" class="website">moztw.org</a></li>
-          <li><a href="https://groups.google.com/forum/#!forum/moztw-general" class="email">{{ _('Forum') }}</a></li>
+          <li><a href="https://lists.mozilla.org/listinfo/community-taiwan" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="irc://irc.mozilla.org/mozilla-taiwan" class="irc">IRC: #mozilla-taiwan</a></li>
           <li><a href="https://twitter.com/Foxmosa" class="twitter">@Foxmosa</a></li>
           <li><a href="https://www.facebook.com/MozTW" class="facebook">Facebook</a></li>
