Fix bug 1052088 - Gear store home and tabzilla promos

--- a/bedrock/mozorg/templates/mozorg/home/home-new.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-new.html
@@ -131,6 +131,17 @@
             <a class="fxos-link" href="{{ url('firefox.desktop.index') }}">{{ _('Learn more') }}</a>
           </div>
         </li>
+      {% if l10n_has_tag('fundraising_2014') %}
+        <li id="promo-6" class="item promo-large-landscape donate" tabindex="0" data-name="Donate to support the open web">
+          <h2 class="primary go">{{ _('Donate to Mozilla') }}</h2>
+          <a class="panel-link" href="{{ donate_url('mozillaorg_largeblock') }}">
+            <div class="secondary">
+              <h3>{{ _('Your gift helps us build the Internet the world needs.') }}</h3>
+              <p class="more">{{ _('Donate today') }}</p>
+            </div>
+          </a>
+        </li>
+      {% else %}
         <li id="promo-6" class="item promo-large-landscape webmaker" tabindex="0" data-name="Teach the Web">
           <h2 class="primary go">{{ _('Teach the Web') }}</h2>
           <a class="panel-link" rel="external" href="https://webmaker.org/">
@@ -140,14 +151,23 @@
             </div>
           </a>
         </li>
+      {% endif %}
         <li id="promo-7" class="item promo-face">
           {{ promo_face(3) }}
         </li>
+      {% if l10n_has_tag('gear_store') %}
+        <li id="promo-8" class="item promo-small-landscape webmaker" data-name="Webmaker">
+          <a class="panel-link" rel="external" href="https://webmaker.org/">
+            <h2>{{ _('Become a Webmaker') }}</h2>
+          </a>
+        </li>
+      {% else %}
         <li id="promo-8" class="item promo-small-landscape appmaker" data-name="Build an app in seconds">
           <a class="panel-link" rel="external" href="https://webmaker.org/appmaker">
             <h2>{{ _('Build an app <br>in seconds') }}</h2>
           </a>
         </li>
+      {% endif %}
         <li id="promo-9" class="item promo-small-landscape volunteer" data-name="Volunteer with Mozilla">
           <a class="panel-link" href="{{ url('mozorg.contribute') }}">
             <h2>{{ _('Volunteer <br>with Mozilla') }}</h2>
@@ -174,13 +194,13 @@
           </a>
         </li>
       {% endif %}
-      {% if l10n_has_tag('fundraising_2014') %}
-        <li id="promo-11" class="item promo-large-landscape donate" tabindex="0" data-name="Donate to support the open web">
-          <h2 class="primary go">{{ _('Donate to Mozilla') }}</h2>
-          <a class="panel-link" href="{{ donate_url('mozillaorg_largeblock') }}">
+      {% if l10n_has_tag('gear_store') %}
+        <li id="promo-11" class="item promo-large-landscape gear" tabindex="0" data-name="Get gear">
+          <h2 class="primary go">{{ _('Official Mozilla gear is here') }}</h2>
+          <a class="panel-link" href="https://gear.mozilla.org/?ref=OMG_launch&amp;utm_campaign=OMG_launch&amp;utm_source=gear.mozilla.org&amp;utm_medium=referral&amp;utm_content=mozillaorg_largeblock">
             <div class="secondary">
-              <h3>{{ _('Your gift helps us build the Internet the world needs.') }}</h3>
-              <p class="more">{{ _('Donate today') }}</p>
+              <h3>{{ _('Merch with a mission. <br>Products with a purpose. <br>Goods that do good.') }}</h3>
+              <p class="more">{{ _('Get your Mozilla gear') }}</p>
             </div>
           </a>
         </li>
