--- a/media/css/tabzilla/tabzilla.less
+++ b/media/css/tabzilla/tabzilla.less
@@ -595,6 +595,28 @@ html[dir="rtl"] {
     }
 }
 
+// Gear Store Promo
+
+#tabzilla-promo .snippet#tabzilla-promo-gear a {
+    padding: 35px 120px 25px 20px;
+    width: 160px;
+    height: 150px;
+    color: #fff;
+    background-color: #95368c;
+    background-image: url(/media/img/home/voices/promos/gear/gear-high-res.png);
+    background-position: 190px 30px;
+
+    h4 {
+        color: #fff;
+        font-size: 32px;
+        line-height: 1;
+        text-transform: none;
+        .open-sans;
+        font-weight: normal;
+        letter-spacing: -.1ex;
+    }
+}
+
 @media (-webkit-min-device-pixel-ratio: 1.5),
        (                min-resolution: 1.5dppx),
        (                min-resolution: 144dpi) {
