Fix bug 1102955: Use old contribute form for most locales on new page.
Allow us to enable the new contribute pages for all locales
without having to wait for new ET-based responders to be setup.

--- a/bedrock/mozorg/templates/mozorg/contribute/contribute-form.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/contribute-form.html
@@ -42,9 +42,11 @@
        {% if contribute_success and return_to_form %} style="display:none"{% endif %}>
     <fieldset>
       <div class="row">
-        <div class="form-column-1">
-          <h3>{{_('Want to help?')}}</h3>
-        </div>
+        {% if not is_old_form %}
+          <div class="form-column-1">
+            <h3>{{_('Want to help?')}}</h3>
+          </div>
+        {% endif %}
         <div class="form-column-2">
           <div class="field field-interest">
             {{ form.interest|safe }}
