--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -950,6 +950,13 @@ textarea:focus {
     .container {
         padding-top: 0;
     }
+
+    // old inquiry form
+    .billboard {
+        border-bottom: none;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 .inquiry-form {
