--- a/bedrock/mozorg/templates/mozorg/contribute/contribute-base.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/contribute-base.html
@@ -6,7 +6,7 @@
 
 {% from "newsletter/includes/macros.html" import email_form_thankyou with context %}
 
-{% add_lang_files "mozorg/contribute" "mozorg/contribute/index" %}
+{% add_lang_files "mozorg/contribute/index" %}
 
 {% block body_class %}{{ super() }} contribute{% endblock %}
 
@@ -18,7 +18,7 @@
   {{ js('contribute-2015') }}
 {% endblock %}
 
-{% if l10n_has_tag('contribute_2015') %}
+{% if l10n_has_tag('active', 'mozorg/contribute/index') %}
   {% block site_header_nav %}{% endblock %}
   {% block site_header_logo %}{% endblock %}
 {% endif %}
@@ -26,7 +26,7 @@
 {% block content %}
 <main role="main">
 
-{% if l10n_has_tag('contribute_2015') %}
+{% if l10n_has_tag('active', 'mozorg/contribute/index') %}
 {% block contrib_head %}
   <header class="page-head">
     <div class="contribute-masthead">
@@ -107,7 +107,7 @@
 
   {% block contrib_content %}{% endblock contrib_content %}
 
-{% if l10n_has_tag('contribute_2015') %}
+{% if l10n_has_tag('active', 'mozorg/contribute/index') %}
   {% block contrib_footer %}
   <section class="section contrib-extra">
     <div class="container">
