Bug 1008653 - History page: fix slide 10 for bg

--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -1420,6 +1420,7 @@
 }
 
 // Fact @10 Fixes for specific locales
+[lang='bg'] .on #fact10 .message,
 [lang^='es'] .on #fact10 .message,
 [lang='it'] .on #fact10 .message {
     padding: 30px 40px 26px 40px;
