Fix bug 1102696 - Add Alcatel OTF E availability in Russia

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -194,6 +194,7 @@
           <h3>{{_('Russia')}}</h3>
           <ul>
             <li><a class="ebay" href="http://www.ebay.com/itm/eBay-Exclusive-ZTE-OPEN-C-Dual-Core-4-Latest-Firefox-OS-3G-Unlocked-Smartphone-/111326263156?ssPageName=STRK:MESE:IT">eBay</a></li>
+            <li><a class="megafon" href="http://shop.megafon.ru/pathfinder.php?id=87125">MegaFon</a></li>
           </ul>
         </div>
         <div class="provider" data-country="sv">
