--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -1218,6 +1218,7 @@
                     <li>{{ _('Germany') }}</li>
                     <li>{{ _('Hungary') }}</li>
                     <li>{{ _('Poland') }}</li>
+                    <li>{{ _('Russia') }}</li>
                   </ul>
 
                   <h5>{{ _('Operators') }}</h5>
