--- a/media/css/firefox/os/get_device.less
+++ b/media/css/firefox/os/get_device.less
@@ -160,6 +160,9 @@
     .cherry-mobile {
         background: transparent url('/media/img/firefox/os/logo/cherry-mobile.png') top center no-repeat;
     }
+    .megafon {
+        background: transparent url('/media/img/firefox/os/logo/megafon.png') top center no-repeat;
+    }
     .last {
         border-right: none;
     }
