Add Bug Bounty Hall of Fame page and move other bug bounty pages into /security/bug-bounty/* Bug 1090468

--- a/bedrock/security/templates/security/bug-bounty.html
+++ b/bedrock/security/templates/security/bug-bounty.html
@@ -69,7 +69,7 @@
       </ul>
 
       <p>More information about this program can be found in the
-        <a href="{{ url('security.bug-bounty-faq') }}">Client Security
+        <a href="{{ url('security.bug-bounty.faq') }}">Client Security
           Bug Bounty Program FAQ.</a>
 
       <h2>Web Application and Services Reward Guidelines</h2>
@@ -87,17 +87,17 @@
 
       <ul>
         <li>Security bug is present in the web properties outlined in the
-          <a href="{{ url('security.bug-bounty-faq-webapp') }}">Web Application Security Bounty
+          <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security Bounty
             FAQ.</a></li>
         <li>Security bug is on the list of sites which part of the bounty.
-          See the <a href="{{ url('security.bug-bounty-faq-webapp') }}#eligible-bugs">eligible bugs</a>
-            section of the <a href="{{ url('security.bug-bounty-faq-webapp') }}">Web Application Security
+          See the <a href="{{ url('security.bug-bounty.faq-webapp') }}#eligible-bugs">eligible bugs</a>
+            section of the <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security
               Bounty FAQ</a>
             for the list of sites which is included under the bounty.</li>
       </ul>
 
       <p>More information about this program can be found in the
-        <a href="{{ url('security.bug-bounty-faq-webapp') }}">Web Application Security Bounty
+        <a href="{{ url('security.bug-bounty.faq-webapp') }}">Web Application Security Bounty
           FAQ.</a></p>
 
       <h2>Process</h2>
