--- a/bedrock/security/templates/security/bug-bounty/faq-webapp.html
+++ b/bedrock/security/templates/security/bug-bounty/faq-webapp.html
@@ -21,7 +21,7 @@
         This FAQ covers web applications and if you are reporting an issue
         unrelated to a web application security vulnerability,
         (e.g. a security issue in the Firefox browser), please see the original:
-        <a href="{{ url('security.bug-bounty-faq') }}">Security Bug Bounty Program FAQ.</a>
+        <a href="{{ url('security.bug-bounty.faq') }}">Security Bug Bounty Program FAQ.</a>
         For more about the background of the bug bounty program see the
         <a href="{{ url('security.bug-bounty') }}">official guidelines</a>
         governing the program.</p>
