--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -256,6 +256,7 @@
 
 // Product download buttons
 
+.download-button .linux-arm-download,
 .download-button .unrecognized-download,
 .download-button .unsupported-download {
     display: none;
@@ -530,6 +531,7 @@
 
 .download-button .os_linux,
 .download-button .os_linux64,
+.linux.arm .download-button .os_linux,
 .linux.x86.x64 .download-list .os_linux,
 .download-button .os_windows,
 .download-button .os_osx,
@@ -553,6 +555,7 @@
     display: block !important;
 }
 
+.linux.arm .download-button .linux-arm-download,
 .ios .download-button .unsupported-download,
 .oldwin .download-button .unsupported-download,
 .oldmac .download-button .unsupported-download {
