Fix Bug 1105037 - Firefox and Thunderbird pages should show the respective favicons rather than the global Mozilla favicon

--- a/bedrock/firefox/templates/firefox/fxos-base.html
+++ b/bedrock/firefox/templates/firefox/fxos-base.html
@@ -9,6 +9,8 @@
 {% block page_title_prefix %}Mozilla Firefox OS — {% endblock %}
 {% block page_image %}{{ media('img/firefox/firefox-256.jpg') }}{% endblock %}
 {% block page_favicon %}{{ media('img/firefox/favicon.ico?2013-08') }}{% endblock %}
+{% block page_favicon_large %}{{ media('img/firefox/favicon-196.png') }}{% endblock %}
+{% block page_ios_icon %}{{ media('img/firefox/ios-icon-180.png') }}{% endblock %}
 
 {% block facebook_id %}14696440021{# facebook.com/Firefox #}{% endblock %}
 {% block twitter_id %}firefox{% endblock %}
