--- a/bedrock/base/templates/base.html
+++ b/bedrock/base/templates/base.html
@@ -32,8 +32,8 @@
     <meta name="twitter:app:name:googleplay" content="{% block android_app_name %}{{ _('Firefox') }}{% endblock %}">
     <meta name="twitter:app:id:googleplay" content="{% block android_app_id %}org.mozilla.firefox{% endblock %}">
     <link rel="shortcut icon" href="{% block page_favicon %}{{ media('img/favicon.ico') }}{% endblock %}">
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{{ media('img/favicon/apple-touch-icon-180x180.png') }}">
-    <link rel="icon" type="image/png" sizes="196x196" href="{{ media('img/favicon/favicon-196x196.png') }}">
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{% block page_ios_icon %}{{ media('img/favicon/apple-touch-icon-180x180.png') }}{% endblock %}">
+    <link rel="icon" type="image/png" sizes="196x196" href="{% block page_favicon_large %}{{ media('img/favicon/favicon-196x196.png') }}{% endblock %}">
     {% include 'includes/canonical-url.html' %}
     {% endblock shared_meta %}
 
@@ -66,8 +66,6 @@
     {% block extrahead %}
       {# Extra header stuff (scripts, styles, metadata, etc) seen by all browsers. Use the 'page_css' block for CSS you want to hide from IE7 and lower. #}
     {% endblock %}
-
-    {% block favicon %}<link rel="shortcut icon" href="{{ media('img/favicon.ico') }}">{% endblock %}
 
     {{ js('site') }}
 
