--- a/bedrock/firefox/templates/firefox/independent.html
+++ b/bedrock/firefox/templates/firefox/independent.html
@@ -25,8 +25,8 @@
 <meta name="twitter:app:name:googleplay" content="{% block android_app_name %}{{ super() }}{% endblock %}">
 <meta name="twitter:app:id:googleplay" content="{% block android_app_id %}{{ super() }}{% endblock %}">
 <link rel="shortcut icon" href="{% block page_favicon %}{{ super() }}{% endblock %}">
-<link rel="apple-touch-icon" type="image/png" sizes="256x256" href="{{ media('img/firefox/firefox-256.jpg') }}">
-<link rel="icon" type="image/png" sizes="196x196" href="{{ media('img/firefox/favicon.ico?2013-08') }}">
+<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{% block page_ios_icon %}{{ super() }}{% endblock %}">
+<link rel="icon" type="image/png" sizes="196x196" href="{% block page_favicon_large %}{{ super() }}{% endblock %}">
 {% include 'includes/canonical-url.html' %}
 {% endblock shared_meta %}
 
