--- a/bedrock/thunderbird/templates/thunderbird/base-resp.html
+++ b/bedrock/thunderbird/templates/thunderbird/base-resp.html
@@ -4,6 +4,11 @@
 
 {% extends "base-resp.html" %}
 
+{% block page_image %}{{ media('img/thunderbird/thunderbird-256.jpg') }}{% endblock %}
+{% block page_favicon %}{{ media('img/thunderbird/favicon.ico') }}{% endblock %}
+{% block page_favicon_large %}{{ media('img/thunderbird/favicon-196.png') }}{% endblock %}
+{% block page_ios_icon %}{{ media('img/thunderbird/ios-icon-180.png') }}{% endblock %}
+
 {% block body_class %}sky{% endblock %}
 
 {% block site_css %}
