Add Firefox Hello ToS and Privacy Notice (Bug 1101126, 1101129)

--- a/media/css/legal/legal.less
+++ b/media/css/legal/legal.less
@@ -208,6 +208,7 @@
         &.terms-openbadges  a:before { background-position: left -200px; }
         &.terms-webmaker    a:before { background-position: left -240px; }
         &.terms-thunderbird a:before { background-position: left -280px; }
+        &.terms-firefox-hello a:before { background-position: left -320px; }
     }
 
 }
