--- a/media/css/privacy/privacy.less
+++ b/media/css/privacy/privacy.less
@@ -164,7 +164,7 @@
     a {
       display: table-cell;
       padding: 0 0 0 48px;
-      background-image: url(/media/img/privacy/icons.png);
+      background-image: url(/media/img/legal/icons.png);
       background-repeat: no-repeat;
       line-height: 1.2;
       vertical-align: middle;
@@ -182,6 +182,10 @@
 
     &.policy-persona a {
       background-position: left -120px;
+    }
+
+    &.policy-firefox-hello a {
+      background-position: left -320px;
     }
   }
 }
