--- a/bedrock/legal/templates/legal/index.html
+++ b/bedrock/legal/templates/legal/index.html
@@ -23,6 +23,7 @@
       <li class="terms-firefox"><a href="{{ url('legal.terms.services') }}"><span>{{ _('Firefox Services') }}</span></a></li>
       <li class="terms-webmaker"><a href="https://webmaker.org/terms"><span>{{ _('Webmaker') }}</span></a></li>
       <li class="terms-marketplace"><a href="https://marketplace.firefox.com/terms-of-use"><span>{{ _('Firefox Marketplace') }}</span></a></li>
+      <li class="terms-firefox-hello"><a href="{{ url('legal.terms.firefox-hello') }}"><span>{{ _('Firefox Hello') }}</span></a></li>
     </ul>
   </section>
 
