Add MegaFon to operators list for OTF E. Bug 1104840.

--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -1224,6 +1224,7 @@
                   <h5>{{ _('Operators') }}</h5>
                   <ul class="comma-list">
                     <li>{{ _('Congstar') }}</li>
+                    <li>{{ _('MegaFon') }}</li>
                     <li>{{ _('O2') }}</li>
                     <li>{{ _('T-Mobile') }}</li>
                   </ul>
