Update the cache date of the legal icon set (Bug 1101126)

--- a/media/css/legal/legal.less
+++ b/media/css/legal/legal.less
@@ -186,7 +186,7 @@
             content: " ";
             display: block;
             position: absolute;
-            background-image: url(/media/img/legal/icons.png);
+            background-image: url(/media/img/legal/icons.png?2014-11);
             background-repeat: no-repeat;
             height: 40px;
             width: 40px;
