--- a/media/css/privacy/privacy.less
+++ b/media/css/privacy/privacy.less
@@ -164,7 +164,7 @@
     a {
       display: table-cell;
       padding: 0 0 0 48px;
-      background-image: url(/media/img/legal/icons.png);
+      background-image: url(/media/img/legal/icons.png?2014-11);
       background-repeat: no-repeat;
       line-height: 1.2;
       vertical-align: middle;
