[fix bug 1106065] Add version check for getConfiguration('selectedSearchEngine') on firstrun

--- a/bedrock/firefox/templates/firefox/australis/firstrun-34-tour.html
+++ b/bedrock/firefox/templates/firefox/australis/firstrun-34-tour.html
@@ -43,7 +43,7 @@
             </div>
             {{ high_res_img('img/firefox/australis/diag-menu-bar.jpg?03-2014', {'alt': _('The features you use most, all in one place'), 'width': '300', 'height': '188'}) }}
           </li>
-          <li class="tour-step app-menu" data-step="2" data-tip-prev="{{ _('<span>Previous:</span> Menu') }}" data-tip-next="{{ _('<span>Next:</span> Search') }}">
+          <li class="tour-step" data-step="2" data-tip-prev="{{ _('<span>Previous:</span> Menu') }}" data-tip-next="{{ _('<span>Next:</span> Search') }}">
             <div class="tour-item">
               {# L10n: <br> tag below used for formatting only. #}
               <h2 class="tour-highlight step-target" data-target="customize" data-effect="wobble">
