--- a/media/css/sandstone/lib.less
+++ b/media/css/sandstone/lib.less
@@ -394,7 +394,7 @@
     }
 }
 
-.background-size(@width: 0, @height: 0) {
-    -webkit-background-size: @width @height;
-            background-size: @width @height;
+.background-size(...) {
+    -webkit-background-size: @arguments;
+            background-size: @arguments;
 }
