[fix bug 1106305] Specify What's New Variant For 35 Beta

--- a/bedrock/firefox/templates/firefox/search_tour/no-tour.html
+++ b/bedrock/firefox/templates/firefox/search_tour/no-tour.html
@@ -4,6 +4,8 @@
 
 {% extends "firefox/search_tour/index.html" %}
 
+{% block body_id %}whatsnew-search-no-tour{% endblock %}
+
 {% block site_css %}
   {{ css('firefox_search_no_tour') }}
 {% endblock %}
