--- a/bedrock/firefox/templates/firefox/search_tour/tour.html
+++ b/bedrock/firefox/templates/firefox/search_tour/tour.html
@@ -8,6 +8,8 @@
   {{ css('firefox_search_tour') }}
 {% endblock %}
 
+{% block body_id %}whatsnew-search-tour-34{% endblock %}
+
 {% block string_data %}
 data-forced-title="{{ _('Searching just got better') }}"
 data-forced-text="{{ _('A new default. A new look. A brand new way to search.') }}"
