--- a/bedrock/firefox/templates/firefox/all.html
+++ b/bedrock/firefox/templates/firefox/all.html
@@ -38,7 +38,7 @@
     <h1>{{ self.page_title()  }}</h1>
     <h2>{{ self.page_desc() }}</h2>
     <p><a class="sysreq" href="{{ product_url('firefox', 'sysreq', channel) }}">{{ _('Check the system requirements') }}</a><br />
-    <a class="sysreq" href="{{ product_url('firefox', 'notes') }}">{{ _('Release notes') }}</a>
+    <a class="sysreq" href="{{ product_url('firefox', 'notes', channel) }}">{{ _('Release notes') }}</a>
     </p>
   </header>
 
