This might come in handy...

--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -1067,6 +1067,11 @@ nav.menu-bar {
     }
 }
 
+.invert {
+    transform: rotateY(-180deg);
+    transition: transform 1s ease-in-out;
+}
+
 /* }}} */
 /* {{{ Responsive Grid */
 
