Add Costa Rica avail for Alcatel OTF C. Bug 1107572.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -48,6 +48,12 @@
             <li><a class="movistar" href="http://www.movistar.co">Movistar</a></li>
           </ul>
         </div>
+        <div class="provider" data-country="cr">
+          <h3>{{ _('Costa Rica') }}</h3>
+          <ul>
+            <li><a class="movistar" href="http://movistar.cr/personas/c-movistar-plus/?id=8356">Alcatel One Touch Fire C</a></li>
+          </ul>
+        </div>
         <div class="provider" data-country="cz">
           <h3>{{ _('Czech Republic') }}</h3>
           <ul>
