--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -46,6 +46,7 @@
           <option value="br">{{ _('Brazil') }}</option>
           <option value="cl">{{ _('Chile') }}</option>
           <option value="co">{{ _('Colombia') }}</option>
+          <option value="cr">{{ _('Costa Rica') }}</option>
           <option value="cz">{{ _('Czech Republic') }}</option>
           <option value="sv">{{ _('El Salvador') }}</option>
           <option value="fr">{{ _('France') }}</option>
@@ -894,6 +895,7 @@
 
                   <ul class="comma-list">
                     <li>{{ _('Chile') }}</li>
+                    <li>{{ _('Costa Rica') }}</li>
                     <li>{{ _('Greece') }}</li>
                     <li>{{ _('Macedonia') }}</li>
                     <li>{{ _('Mexico') }}</li>
