--- a/bedrock/mozorg/templates/mozorg/projects/holiday-calendars.html
+++ b/bedrock/mozorg/templates/mozorg/projects/holiday-calendars.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class="midbox">
-      <p>{{ _('We&rsquo;ve got some holiday calendar files available for download. You can either download and then import them into Sunbird or Lightning or you can just subscribe to these calendars by copying their URL and then adding them as new remote calendar files. More information on installing a holiday calendar can be found in the <a href="%s">Adding a holiday calendar article</a>.')|format('https://support.mozillamessaging.com/en-US/kb/Adding+a+holiday+calendar') }}</p>
+      <p>{{ _('We&rsquo;ve got some holiday calendar files available for download. You can either download and then import them into Sunbird or Lightning or you can just subscribe to these calendars by copying their URL and then adding them as new remote calendar files. More information on installing a holiday calendar can be found in the <a href="%s">Adding a holiday calendar article</a>.')|format('https://support.mozilla.org/kb/adding-a-holiday-calendar') }}</p>
       <p>{{ _('You can also find calendars to subscribe to at <a href="%s">iCalShare.com</a>.')|format('http://icalshare.com') }}</p>
   </div>
   <div class="calendar-table billboard">
